Don't hide the sign-in promo when a password autofill happens.

Bug: 777398
Change-Id: Iefb57139e1da5117e56c68cf8ca4bd7245a0cfbf
Reviewed-on: https://chromium-review.googlesource.com/733343
Reviewed-by: Tatiana Gornak <melandory@chromium.org>
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511090}
Former-commit-id: afc6edb205d51901c36249ceb3523e00abc72900